# aegee-milter

./: .gitignore  AUTHORS  Makefile.am  README  TODO  configure.ac  documentation.txt
contrib/: sm8.14.3-prdr.diff
doc/: prdr-milter.texi  prdr-milter.texi.orig
src/: LD_DYNAMIC_LIST  aegee-milter.c  helpers.c  helpers.h  prdr-list.h  prdr-milter.h  prdr-mod.h  recipient_api.c  smfi-operations.c  smfi-operations.h
src/core/: AegeeMilter.cpp  AegeeMilter.hpp  Message.cpp  Message.hpp  Module.cpp  Module.hpp  Privdata.cpp  Privdata.hpp  Recipient.cpp  Recipient.hpp  SoList.cpp  SoList.hpp  SoModule.cpp  SoModule.hpp  aegee-milter.c  aegee-milter.cpp  helpers.c  helpers.cpp  intern.hpp  recipient_api.c  recipient_api.cpp  smfi-operations.c  smfi-operations.cpp
src/lists/: list_listserv.c  list_listserv.cpp  list_log.c  list_log.cpp  list_memcached.cpp  list_odbc.c  list_timsieved_scripts.c  list_timsieved_scripts.cpp
src/modules/: mod_arf.cpp  mod_arf_microsoft.c  mod_block_sender.c  mod_block_sender.cpp  mod_delay.c  mod_delay.cpp  mod_equal.c  mod_equal.cpp  mod_relayed.c  mod_relayed.cpp  mod_sieve.c  mod_simple.c  mod_simple.cpp  mod_via.c  mod_via.cpp  mod_x_scc_headers.c  mod_x_scc_headers.cpp
src/modules/mod_arf/: core.c  core.cpp  microsoft.c  microsoft.cpp
src/modules/mod_sieve/: core.c  core.cpp  libcyrus_sieve.c  libcyrus_sieve.cpp  libsieve.c  libsieve.cpp  message.h  message.hpp
src/objects/: AegeeMilter.cpp  AegeeMilter.hpp  SoList.cpp  SoList.hpp  SoModule.cpp  SoModule.hpp
